--- a/src/static_libs/libunibreak/AUTHORS
+++ b/src/static_libs/libunibreak/AUTHORS
@@ -1,4 +1,5 @@
-Wu Yongwei.  Designed and implemented liblinebreak.
+Wu Yongwei.  Designed and implemented the original liblinebreak.
+Current maintainer of libunibreak.
 
 Nikolay Pultsin.  Put forward the original requirements on liblinebreak,
 performed tests, and made a lot of suggestions on the initial versions.
@@ -6,3 +7,5 @@ performed tests, and made a lot of suggestions on the initial versions.
 Thomas Klausner.  Autoconfiscated and libtoolized liblinebreak.
 
 Tom Hacohen.  Added word boundaries support.
+
+Petr Filipsky.  Added incremental processing for line-breaking.
