--- a/AUTHORS
+++ b/AUTHORS
@@ -49,6 +49,7 @@ Patryk Kaczmarek <patryk.k@samsung.com>
 Igor Murzov <e-mail@date.by>
 Vladislav Brovko <v.brovko@samsung.com>
 ChunEon Park (Hermet) <hermet@hermet.pe.kr>
+Rajeev Ranjan (Rajeev) <rajeev.r@samsung.com> <rajeev.jnnce@gmail.com>
 
 Eet
 ---
